@@ -1,3 +1,14 @@
+2000-07-27  Yuuichi Teranishi  <teranisi@quickhack.net>
+
+	* emacs/mhc-summary.el (mhc-summary-line-format-alist): Changed
+	conflict definition.
+	(mhc-summary-line-inserter-setup): Setup icon too.
+
+	* emacs/mhc-bm.el (mhc-bm-icon-alist): Added example of `Conflict'.
+	* emacs/mhc-bm.el (mhc-icon-exists-p): New function.
+
+	* emacs/mhc-xmas.el: Likewise.
+
 2000-07-26  Hideyuki SHIRAI  <shirai@quickhack.net>
 
 	* emacs/mhc-ps.el (mhc-ps-save): Add default option with read-file-name().
@@ -5,7 +16,7 @@
 	(mhc-ps/replace-table): Ditto.
 	(mhc-ps/string): Ditto. Fix indent for PostScript.
 	(mhc-ps/uniq-list): New function.
-	
+
 2000-07-24  Yoshinari Nomura  <nom@quickhack.net>
 
 	* emacs/mhc-cmail.el (mhc-cmail-get-import-buffer):
